# mdbook-transcheck

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: config.rs  differ.rs  fixer.rs  linter.rs  main.rs  matcher.rs  printer.rs  util.rs
testcase/original/: missing_lines.md
testcase/original_keep_comment/: 02_comment.md
testcase/translated/: 01_hello.md  02_comment.md  05_keep_original.md  mismatch_lines.md  missing_lines.md
testcase/translated_keep_comment/: comment.md
