[package]
name = "mdbook-transcheck"
version = "0.2.3"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/mdbook-transcheck"
keywords = ["mdbook", "translation"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "Checker for translated mdbook"
edition = "2018"
exclude = ["testcase/*"]

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/mdbook-transcheck/compare/v{{version}}...Unreleased) - ReleaseDate"},
]

[dependencies]
anyhow       = "1"
console      = "0.10"
diff         = "0.1"
regex        = "1"
serde        = "1"
serde_derive = "1"
structopt    = "0.3"
toml         = "0.4"
walkdir      = "2"
